--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "secret-keys-linter",
-  "displayName": "secret-keys-linter",
+  "displayName": "Secret Keys Linter",
   "description": "Prevents committing sensitive information like API keys and tokens into version control",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.98.0"
+    "vscode": "^1.75.0"
   },
   "categories": [
-    "Other"
+    "Linters"
   ],
   "main": "./out/extension.js",
   "scripts": {
