--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type": "git",
     "url": "https://github.com/AfolabiOlaoluwa/secret-keys-linter"
   },
+  "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.75.0"
   },
