--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "secret-keys-linter",
   "displayName": "Secret Keys Linter",
   "description": "Prevents committing sensitive information like API keys and tokens into version control",
-  "publisher": "SecretKeysLinter",
+  "publisher": "OlaoluwaAfolabi",
   "version": "0.0.1",
   "repository": {
     "type": "git",
